# anonimus_chat

./: .env.ci.example  .env.example  .env.prod.example  .gitignore  Makefile  README.md  docker-compose.override.yml.example  docker-compose.prod.yml  docker-compose.yml  go.mod  go.sum  pyproject.toml  requirements.txt
ai/: main.py
api/: main.py
bot/: go.mod
docker/: ai.Dockerfile  api.Dockerfile  bot-entrypoint.sh  bot-healthcheck.sh  bot.Dockerfile  ci.Dockerfile
docs/: HANDOFF.md  deploy.md
migrations/: 00002_schema.sql  00003_soft_delete_telegram_unique.sql  00004_payments.sql  README.md
scripts/: ci-docker.sh  ci.sh  deploy.sh  gen-webhook-cert.sh  migrate-prod.sh  remote-deploy.sh  seed.sql  setup-vm-ghcr.sh  smoke-bot-image.sh  verify-webhook.sh
shared/: __init__.py  enums.py
tasks/: 001-project-scaffold.md  002-docker-compose.md  002-echo-bot.md  003-ci-pipeline.md  003-database-schema.md  004-redis-queues-sessions.md  004-vm-deploy-registry.md  005-docker-compose.md  005-event-logging.md  006-database-schema.md  006-telegram-bot-webhook.md  007-redis-queues-sessions.md  007-registration-fsm.md  008-event-logging.md  008-main-menu.md  009-i18n-ru-en.md  009-telegram-bot-webhook.md  010-match-routing.md  010-registration-fsm.md  011-main-menu.md  011-queue-ux.md  012-end-dialog-flow.md  012-i18n-ru-en.md  013-ai-dialog-service.md  013-match-routing.md  014-persona-prompts.md  014-queue-ux.md  015-ai-end-dialog-heuristics.md  015-end-dialog-flow.md  016-ai-dialog-service.md  016-photo-intent-classifier.md  017-persona-prompts.md  017-photo-catalog.md  (+39 more)
(+124 files in other folders)
