[project]
name = "anonimus-chat"
version = "0.1.0"
description = "anonimus_chat monorepo — api/ai Python services"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
